--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-progress": "^4.0.2",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
+    "react-native-svg": "^9.13.3",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
