--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
