--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-picker-select": "^6.3.3",
     "react-native-progress": "^4.0.2",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
