--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-dotenv": "^0.2.0",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-picker-select": "^6.3.3",
     "react-native-progress": "^4.0.2",
